# mark

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  release-please-config.json  requirements-optional.txt  requirements.txt  run.sh  sources.example.toml
.github/: dependabot.yml  release.yml
.github/workflows/: ci.yml  codeql.yml  docker-publish.yml  model-pricing-audit.yml  prepare-release.yml  release-please.yml  release.yml
.pricing-audit/: model-pricing-audit.md
docs/: README.md  ask.md  collections.md  configuration.md  data-quality-report.md  docker.md  faq.md  getting-started.md  library.md  managing-your-archive.md  mcp.md  model-pricing-maintenance.md  searching.md  sources.md  usage-and-cost.md
mark/: __init__.py  app.py  ask.py  attachments.py  background.py  collections.py  config.py  embeddings.py  enrich.py  exporting.py  ingest.py  main.py  mcp_server.py  model_pricing.json  model_pricing.py  persist.py  render.py  schemas.py  search.py  uploads.py  visibility.py
mark/api/: __init__.py  ask.py  collections.py  search.py  sessions.py  sources.py  uploads.py  usage.py
mark/db/: __init__.py  connection.py  migrations.py  schema.py
mark/repositories/: __init__.py  collections.py  sessions.py  snippets.py  stats.py  usage.py
mark/sources/: __init__.py  base.py  chatgpt.py  claude_code.py  cline.py  copilot_cli.py  copilot_memory.py  cursor.py  grok.py  vscode.py
mark/web/: fonts.css  index.html  styles.css
mark/web/js/: charts.js  icons.js  main.js  palette.js  router.js  sidebar.js  state.js  utils.js
mark/web/js/views/: ask.js  collections.js  detail.js  library.js  list.js  usage.js
mindex/: __init__.py  app.py  ask.py  background.py  config.py  db.py  enrich.py  exporting.py  ingest.py  main.py  mcp_server.py  persist.py  search.py
mindex/api/: ask.py
mindex/repositories/: snippets.py  usage.py
mindex/sources/: __init__.py  base.py  cline.py  copilot_cli.py  cursor.py  vscode.py
mindex/web/: app.js  index.html  styles.css
mindex/web/js/: api.js  main.js  sidebar.js  state.js
scripts/: mcp_smoke.py  package_smoke.py  seed_demo_data.py  update_model_pricing.py
tests/: conftest.py  test_api.py  test_ask.py  test_collections.py  test_config.py  test_cost.py  test_db.py  test_enrich.py  test_exporting.py  test_mcp_server.py  test_model_pricing.py  test_persist_search.py  test_sources.py  test_visibility.py
