[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

# Distribution is published as "markive" (bare "mark" is taken on PyPI); the
# tool, command, import package, and brand are all "Mark".
[project]
name = "markive"
version = "0.2.0"
description = "Mark — Multi-session AI Recall Keeper: a local, private, searchable archive of your AI coding chats with hybrid semantic search."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Mark Dalton Gray" }]
keywords = [
    "copilot",
    "cline",
    "knowledge-base",
    "semantic-search",
    "vscode",
    "chat-history",
    "ai",
    "recall",
    "memory",
]
classifiers = [
    "Environment :: Web Environment",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Utilities",
]
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "python-multipart>=0.0.9",
    "markdown-it-py>=3.0",
    "mdit-py-plugins>=0.4",
    "pygments>=2.17",
    "numpy>=1.26",
]

[project.optional-dependencies]
# Best-quality "find by meaning" — transformer embeddings (ONNX, no PyTorch).
semantic = ["fastembed>=0.3"]
# Extract text from PDF uploads.
pdf = ["pypdf>=4.0"]
# Expose the archive to MCP clients (Copilot CLI, Cline, Claude Desktop, ...).
mcp = ["mcp>=1.2"]
all = ["fastembed>=0.3", "pypdf>=4.0", "mcp>=1.2"]
# Test/dev tooling (TestClient needs httpx; ruff lints in CI and locally).
dev = ["pytest>=8.0", "httpx>=0.27", "ruff>=0.15"]

[project.scripts]
mark = "mark.main:main"
mark-mcp = "mark.mcp_server:main"
# Aliases matching the distribution name, in case `mark` clashes on PATH.
markive = "mark.main:main"
markive-mcp = "mark.mcp_server:main"

[project.urls]
Homepage = "https://github.com/hacks4snacks/mark"
Issues = "https://github.com/hacks4snacks/mark/issues"

[tool.setuptools]
packages = [
    "mark",
    "mark.api",
    "mark.db",
    "mark.repositories",
    "mark.sources",
]

[tool.setuptools.package-data]
mark = ["web/*", "web/js/*", "web/js/views/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
# Pyflakes (F) + pycodestyle errors (E4/E7/E9) catch real bugs; the modernization
# families (B/C4/SIM/UP) and Ruff's own rules (RUF) keep the code idiomatic after
# a one-time `ruff format` pass. PERF is left advisory-only — its loop / try-except
# hints trade readability or intentional per-item parse-tolerance for micro-opts.
select = ["E4", "E7", "E9", "F", "B", "C4", "RUF", "SIM", "UP"]
ignore = [
    "B008", # FastAPI's File()/Depends()-in-defaults pattern is idiomatic, not a bug.
]
